--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
       top: 0;
       bottom: 0;
       width: 300px;
-      padding-left: 10px;
+      padding-left: 15px;
       overflow-y: scroll;
     }
 
     .tree-view {
-      padding-top: 10px;
+      padding-top: 15px;
     }
 
     #code-content {
@@ -28,10 +28,15 @@
       padding-left: 25px;
       display: block;
       color: #333;
-      height: 100%;
+    }
+
+    code {
+      font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace !important;
+      font-size: 14px;
     }
 
     #code-view {
+      background-color: #f5f5f5;
       position: absolute;
       margin: 0;
       left: 310px;
@@ -39,7 +44,6 @@
       top:0;
       bottom: 0;
       overflow-y: scroll;
-      font-family: 'Consolas, "Liberation Mono", Menlo, Courier, monospace';
     }
   </style>
 </head>
